add fuzz tests and ci

--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -44,7 +44,10 @@ jobs:
           - {std: 11, cxx: g++-5  , bt: Release, bitlinks: shared64 static32}
           - {std: 11, cxx: g++-4.8, bt: Debug  , bitlinks: shared64 static32}
           - {std: 11, cxx: g++-4.8, bt: Release, bitlinks: shared64 static32}
-    env: {STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}", BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"}
+    env: {
+      STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}",
+      BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"
+      }
     steps:
       - {name: checkout, uses: actions/checkout@v3, with: {submodules: recursive}}
       - run: git config --system --add safe.directory '*'  # needed for running in the docker image. see https://github.com/actions/checkout/issues/1169
@@ -134,7 +137,13 @@ jobs:
           - {std: 11, cxx: g++-7      , bt: Release, bitlinks: shared64 static32}
           - {std: 20, cxx: g++-10     , bt: Debug  , bitlinks: shared64 static32}
           - {std: 20, cxx: g++-10     , bt: Release, bitlinks: shared64 static32}
-    env: {CXXFLAGS: "-fno-exceptions -fno-rtti", STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}", BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"}
+    env: {
+      CXXFLAGS: "-fno-exceptions -fno-rtti",
+      CMAKE_FLAGS: "-DRYML_TEST_FUZZ=ON",
+      STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}",
+      BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}",
+      SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"
+      }
     steps:
       - {name: checkout, uses: actions/checkout@v3, with: {submodules: recursive}}
       - run: git config --system --add safe.directory '*'  # needed for running in the docker image. see https://github.com/actions/checkout/issues/1169
@@ -200,7 +209,12 @@ jobs:
           - {std: 11, cxx: g++-4.9, bt: Release, img: ubuntu18.04}
           - {std: 11, cxx: g++-4.8, bt: Debug  , img: ubuntu18.04}
           - {std: 11, cxx: g++-4.8, bt: Release, img: ubuntu18.04}
-    env: {STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}", BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"}
+    env: {
+      CMAKE_FLAGS: "-DRYML_TEST_FUZZ=ON",
+      STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}",
+      BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}",
+      SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"
+      }
     steps:
       - {name: checkout, uses: actions/checkout@v3, with: {submodules: recursive}}
       - run: git config --system --add safe.directory '*'  # needed for running in the docker image. see https://github.com/actions/checkout/issues/1169
