--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -46,7 +46,7 @@ jobs:
     env: {STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}",
           BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}",
           LINT: "${{matrix.lint}}", OS: "${{matrix.os}}",
-          CMAKE_FLAGS: "${{matrix.cmk}}",
+          CMAKE_FLAGS: "${{matrix.cmk}} -DRYML_TEST_FUZZ=ON",
           CODECOV_TOKEN: "${{secrets.CODECOV_TOKEN}}",
           COVERALLS_REPO_TOKEN: "${{secrets.COVERALLS_REPO_TOKEN}}",
           # coveralls disabled: https://github.com/lemurheavy/coveralls-public/issues/1665
